<resources>
    <string name="app_name">玩安卓</string>

    <string name="network_error">网络请求异常，请稍后再试</string>
    <string name="common_error">操作失败，请稍后再试</string>
    <string name="nothing">一无所获，很迷茫......</string>

    <string name="title_home">首页</string>
    <string name="title_question">问答</string>
    <string name="title_square">广场</string>
    <string name="title_system">体系</string>
    <string name="title_project">项目</string>

    <string name="menu_about">关于</string>
    <string name="menu_open_in_browser">在浏览器中打开</string>
    <string name="menu_share_article">分享文章</string>
    <string name="menu_navigation">导航</string>
    <string name="menu_tool">工具</string>

    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">不合法的用户名</string>
    <string name="invalid_password">密码格式不合法</string>
    <string name="login_failed">登录失败</string>
    <string name="login_in">登录</string>
    <string name="login_account_tint">请输入用户名</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="or">或</string>
    <string name="register">注册</string>
    <string name="username_or_password_incorrect_toast">用户名或密码不合法</string>

    <!--首页-->
    <string name="home_new_blog">最新博文</string>
    <string name="home_new_project">最新项目</string>
    <string-array name="home_tab_array">
        <item>最新博文</item>
        <item>最新项目</item>
    </string-array>
    <string name="article_author">作者：%1$s</string>
    <string name="article_share_user">分享人：%1$s</string>
    <string name="article_new">最新</string>
    <string name="article_top">置顶</string>
    <string name="article_category">分类：%1$s&#160;·&#160;%2$s</string>

    <!--个人页-->
    <string name="profile_title">我的</string>
    <string name="profile_favorite_article">收藏文章</string>
    <string name="profile_favorite_website">收藏网站</string>
    <string name="profile_share_article">分享文章</string>
    <string name="profile_share_project">分享项目</string>
    <string name="profile_article_item_desc">作者：%1$s&#160;&#160;分类：%2$s&#160;&#160;时间：%3$s</string>
    <string name="profile_article_item_desc_without_author">分类：%2$s&#160;&#160;时间：%3$s</string>
    <string name="profile_measure_helper">测\n量</string>
    <string name="profile_my_coin">我的积分：%1$d</string>
    <string name="profile_my_level">我的等级：%1$d</string>
    <string name="profile_my_rank">排名 %1$s</string>
    <string name="profile_uncollect">取消收藏</string>
    <string name="profile_uncollect_success">取消成功</string>

    <!--体系-->
    <string name="architecture_first_class">一级分类</string>
    <string name="architecture_second_class">二级分类</string>

    <!--搜索-->
    <string name="search_hot_key">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clear_history">清除历史</string>

    <!--分享-->
    <string name="share_text">分享</string>
    <string name="share_title_hint">文章标题（100字以内）</string>
    <string name="share_link_hint">文章链接</string>
    <string name="share_specification">
        1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;<![CDATA[<br/>]]>
        2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;<![CDATA[<br/>]]>
        3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;<![CDATA[<br/>]]>
        4. 目前处于测试阶段，如果你发现500等错误，可以向我<![CDATA[ <a href=\"https://github.com/hongyangAndroid/wanandroid\">提交日志</a>]]>,让我们一起使网站变得更好。<![CDATA[<br/>]]>
        5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>
    <string name="share_empty_title_error">* 标题不能为空</string>
    <string name="share_empty_link_error">* 链接不能为空</string>
    <string name="share_share_success">分享成功，奥利给！</string>
</resources>
