<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.naib.wandroid.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_architecture"
        android:name="com.naib.wandroid.main.project.ProjectFragment"
        android:label="@string/title_system"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.naib.wandroid.main.architecture.ArchitectureFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_architecture" />
</navigation>
