<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_like"
        android:icon="@drawable/ic_like"
        android:orderInCategory="1"
        android:title=""
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_navigation"
        android:orderInCategory="2"
        android:title="@string/menu_navigation"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_tool"
        android:orderInCategory="3"
        android:title="@string/menu_tool"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_about"
        android:orderInCategory="4"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>