<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/text_hot_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_hot_key"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <com.naib.wandroid.base.widget.LabelLayout
        android:id="@+id/layout_hot_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_16"
        android:paddingTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/text_hot_keys"
        app:line_padding="@dimen/dp_4"
        app:text_background="@drawable/bg_label" />

    <TextView
        android:id="@+id/text_clear_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_clear_history"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_hot_keys" />

    <TextView
        android:id="@+id/text_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_14"
        app:layout_constraintRight_toLeftOf="@id/text_clear_history"
        app:layout_constraintTop_toBottomOf="@id/layout_hot_keys" />

    <com.naib.wandroid.base.widget.LabelLayout
        android:id="@+id/layout_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_search_history" />

</androidx.constraintlayout.widget.ConstraintLayout>