<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?android:attr/windowBackground"
        app:contentPadding="@dimen/dp_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="@dimen/dp_64"
                android:layout_height="@dimen/dp_64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                style="@style/WanText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_20"
                android:textColor="@color/black_80"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_20"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <TextView
                android:id="@+id/profile_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_20"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toBottomOf="@id/profile_coin" />

            <TextView
                android:id="@+id/profile_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/ProfileCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_like"
                android:drawablePadding="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:text="@string/profile_favorite_article" />

            <com.naib.wandroid.base.widget.WanRecyclerView
                android:id="@+id/profile_collect_article_list"
                style="@style/ProfileRecycler" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/ProfileCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_like"
                android:drawablePadding="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:text="@string/profile_favorite_website" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_collect_website_list"
                style="@style/ProfileRecycler" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/ProfileCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/view_profile_share_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:text="@string/profile_share_article"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_add_shared_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_20"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_share_article_list"
                style="@style/ProfileRecycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_profile_share_article" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/ProfileCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:text="@string/profile_share_project" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_share_project_list"
                style="@style/ProfileRecycler" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>